updated carousel homepage and new soccer shirts

--- a/markup/_dist/index.html
+++ b/markup/_dist/index.html
@@ -33,19 +33,23 @@
         <div class="owl-carousel main-carousel">
           <div class="item nl-slides nl-slide-1">
             <div class="container-fluid">
-              <h1>Draft your line up <br /> with NLC2</h1>
+              <h2>Draft your line up with NoLimitCoins</h2>
               <div class="btn btn-primary btn-lg nl-m-t-40">SIGN UP</div>
+            </div>
+          </div>
+          <div class="item nl-slides nl-slide-5">
+            <div class="container-fluid circle-JT">
+              <h2>Heads up Fantasy sports for charity</h2>
+              <div class="btn btn-primary btn-lg nl-m-t-40">SIGN UP</div>
+            </div>
+          </div>
+          <div class="item nl-slides nl-slide-6">
+            <div class="container-fluid circle-JT">
             </div>
           </div>
           <div class="item nl-slides nl-slide-3">
             <div class="container-fluid">
-              <h2>Daily Fantasy Soccer <br /> with NLC2</h2>
-              <div class="btn btn-primary btn-lg nl-m-t-40">SIGN UP</div>
-            </div>
-          </div>
-          <div class="item nl-slides nl-slide-4">
-            <div class="container-fluid">
-              <h2>Fantasy Football with <br /> NLC2</h2>
+              <h2>Daily Fantasy Soccer with NLC2</h2>
               <div class="btn btn-primary btn-lg nl-m-t-40">SIGN UP</div>
             </div>
           </div>
@@ -152,10 +156,10 @@
         <div class="container-fluid">
           <div class="row align-items-center">
             <div class="col-lg-6">
-              <div id="video"><a href="https://www.youtube.com/watch?v=r5saLZQnEaA"><img src="assets/img/nl-section-works-video.jpg" alt=""></a></div>
+              <div id="video"><a href="https://www.youtube.com/watch?v=G2BJG1rRqM8&amp;feature=youtu.be"><img src="assets/img/nl-section-works-video.jpg" alt=""></a></div>
             </div>
             <div class="col-lg-6">
-              <h2>see how it works</h2>
+              <h2>NLC2 & Joe Theismann</h2>
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas erat libero, vehicula quis orci vel, vulputate vehicula diam. Phasellus vulputate sem nisi. Donec id nunc a justo facilisis lobortis.</p>
             </div>
           </div>
