--- a/markup/_dist/live_score_soccer.html
+++ b/markup/_dist/live_score_soccer.html
@@ -565,79 +565,79 @@
               </div>
               <div class="nl-team-field">
                 <div class="player-main-block soccer">
-                  <div data-position="GK" class="nl-player-block nl-GK-position"><img src="assets/img/img-goalkeeper.png" alt="goalkeeper">
-                    <div class="nl-player-block--data">
-                      <p>gronkowski</p>
-                      <p class="data">FP <span class="orange">12.67</span> </p>
-                      <p class="data">Score <span class="orange">15</span></p>
-                    </div>
-                  </div>
-                  <div data-position="DL" class="nl-player-block nl-DL-position"><img src="assets/img/img-players.png" alt="goalkeeper">
-                    <div class="nl-player-block--data">
-                      <p class="playing">gronkowski</p>
-                      <p class="data">FP <span class="orange">12.67</span> </p>
-                      <p class="data">Score <span class="orange">15</span></p>
-                    </div>
-                  </div>
-                  <div data-position="DR" class="nl-player-block nl-DR-position"><img src="assets/img/img-players.png" alt="goalkeeper">
-                    <div class="nl-player-block--data">
-                      <p>gronkowski</p>
-                      <p class="data">FP <span class="orange">12.67</span> </p>
-                      <p class="data">Score <span class="orange">15</span></p>
-                    </div>
-                  </div>
-                  <div data-position="FLEXL" class="nl-player-block nl-FLEXL-position"><img src="assets/img/img-players.png" alt="goalkeeper">
-                    <div class="nl-player-block--data">
-                      <p>gronkowski</p>
-                      <p class="data">FP <span class="orange">12.67</span> </p>
-                      <p class="data">Score <span class="orange">15</span></p>
-                    </div>
-                  </div>
-                  <div data-position="DM" class="nl-player-block nl-DM-position"><img src="assets/img/img-players.png" alt="goalkeeper">
+                  <div data-position="GK" class="nl-player-block nl-GK-position"><img src="assets/img/soccer/GK.png" alt="goalkeeper">
                     <div class="nl-player-block--data">
                       <p class="not-playing">gronkowski</p>
                       <p class="data">FP <span class="orange">12.67</span> </p>
                       <p class="data">Score <span class="orange">15</span></p>
                     </div>
                   </div>
-                  <div data-position="MM" class="nl-player-block nl-MM-position"><img src="assets/img/img-players.png" alt="goalkeeper">
-                    <div class="nl-player-block--data">
-                      <p>gronkowski</p>
-                      <p class="data">FP <span class="orange">12.67</span> </p>
-                      <p class="data">Score <span class="orange">15</span></p>
-                    </div>
-                  </div>
-                  <div data-position="MR" class="nl-player-block nl-MR-position"><img src="assets/img/img-players.png" alt="goalkeeper">
-                    <div class="nl-player-block--data">
-                      <p class="playing">gronkowski</p>
-                      <p class="data">FP <span class="orange">12.67</span> </p>
-                      <p class="data">Score <span class="orange">15</span></p>
-                    </div>
-                  </div>
-                  <div data-position="ML" class="nl-player-block nl-ML-position"><img src="assets/img/img-players.png" alt="goalkeeper">
+                  <div data-position="DL" class="nl-player-block nl-DL-position"><img src="assets/img/soccer/D-L.png" alt="goalkeeper">
                     <div class="nl-player-block--data">
                       <p class="played">gronkowski</p>
                       <p class="data">FP <span class="orange">12.67</span> </p>
                       <p class="data">Score <span class="orange">15</span></p>
                     </div>
                   </div>
-                  <div data-position="FLEXR" class="nl-player-block nl-FLEXR-position"><img src="assets/img/img-players.png" alt="goalkeeper">
-                    <div class="nl-player-block--data">
-                      <p>gronkowski</p>
-                      <p class="data">FP <span class="orange">12.67</span> </p>
-                      <p class="data">Score <span class="orange">15</span></p>
-                    </div>
-                  </div>
-                  <div data-position="AL" class="nl-player-block nl-AL-position"><img src="assets/img/img-players.png" alt="goalkeeper">
+                  <div data-position="DR" class="nl-player-block nl-DR-position"><img src="assets/img/soccer/D-R.png" alt="goalkeeper">
                     <div class="nl-player-block--data">
                       <p class="not-playing">gronkowski</p>
                       <p class="data">FP <span class="orange">12.67</span> </p>
                       <p class="data">Score <span class="orange">15</span></p>
                     </div>
                   </div>
-                  <div data-position="AR" class="nl-player-block nl-AR-position"><img src="assets/img/img-players.png" alt="goalkeeper">
+                  <div data-position="FLEXL" class="nl-player-block nl-FLEXL-position"><img src="assets/img/soccer/FLEX-L.png" alt="goalkeeper">
                     <div class="nl-player-block--data">
                       <p class="played">gronkowski</p>
+                      <p class="data">FP <span class="orange">12.67</span> </p>
+                      <p class="data">Score <span class="orange">15</span></p>
+                    </div>
+                  </div>
+                  <div data-position="DM" class="nl-player-block nl-DM-position"><img src="assets/img/soccer/D-M.png" alt="goalkeeper">
+                    <div class="nl-player-block--data">
+                      <p>gronkowski</p>
+                      <p class="data">FP <span class="orange">12.67</span> </p>
+                      <p class="data">Score <span class="orange">15</span></p>
+                    </div>
+                  </div>
+                  <div data-position="MM" class="nl-player-block nl-MM-position"><img src="assets/img/soccer/M-M.png" alt="goalkeeper">
+                    <div class="nl-player-block--data">
+                      <p>gronkowski</p>
+                      <p class="data">FP <span class="orange">12.67</span> </p>
+                      <p class="data">Score <span class="orange">15</span></p>
+                    </div>
+                  </div>
+                  <div data-position="MR" class="nl-player-block nl-MR-position"><img src="assets/img/soccer/M-R.png" alt="goalkeeper">
+                    <div class="nl-player-block--data">
+                      <p class="played">gronkowski</p>
+                      <p class="data">FP <span class="orange">12.67</span> </p>
+                      <p class="data">Score <span class="orange">15</span></p>
+                    </div>
+                  </div>
+                  <div data-position="ML" class="nl-player-block nl-ML-position"><img src="assets/img/soccer/M-L.png" alt="goalkeeper">
+                    <div class="nl-player-block--data">
+                      <p>gronkowski</p>
+                      <p class="data">FP <span class="orange">12.67</span> </p>
+                      <p class="data">Score <span class="orange">15</span></p>
+                    </div>
+                  </div>
+                  <div data-position="FLEXR" class="nl-player-block nl-FLEXR-position"><img src="assets/img/soccer/FLEX-R.png" alt="goalkeeper">
+                    <div class="nl-player-block--data">
+                      <p class="not-playing">gronkowski</p>
+                      <p class="data">FP <span class="orange">12.67</span> </p>
+                      <p class="data">Score <span class="orange">15</span></p>
+                    </div>
+                  </div>
+                  <div data-position="AL" class="nl-player-block nl-AL-position"><img src="assets/img/soccer/A-L.png" alt="goalkeeper">
+                    <div class="nl-player-block--data">
+                      <p>gronkowski</p>
+                      <p class="data">FP <span class="orange">12.67</span> </p>
+                      <p class="data">Score <span class="orange">15</span></p>
+                    </div>
+                  </div>
+                  <div data-position="AR" class="nl-player-block nl-AR-position"><img src="assets/img/soccer/A-R.png" alt="goalkeeper">
+                    <div class="nl-player-block--data">
+                      <p class="playing">gronkowski</p>
                       <p class="data">FP <span class="orange">12.67</span> </p>
                       <p class="data">Score <span class="orange">15</span></p>
                     </div>
@@ -817,6 +817,17 @@
             </div>
           </div>
           <div class="row">
+            <div class="col-12 text-center">
+              <div class="nl-status-wrapper">
+                <ul>
+                  <li><span class="playing indicator"></span><span>Playing</span></li>
+                  <li><span class="played indicator"></span><span>Played</span></li>
+                  <li><span class="not-playing indicator"></span><span>Not Playing</span></li>
+                </ul>
+              </div>
+            </div>
+          </div>
+          <div class="row">
                   <div class="col-10 offset-1 col-sm-6 offset-sm-0 col-lg-3 col-xl-2 small-padding-live-score">
                     <div class="nl-contest-info-table nl-live-score-contest-table">
                       <div class="rank">
@@ -827,7 +838,7 @@
                           <p>Best team evah</p>
                           <p class="italic">Best manager evah</p>
                         </div>
-                        <div class="rank__thumb"><img src="assets/img/helmet-2" alt=""></div>
+                        <div class="rank__thumb"><img src="assets/img/soccer/A-R.png" alt=""></div>
                       </div>
                       <table class="table table-info3">
                         <thead>
@@ -961,7 +972,7 @@
                           <p>Best team evah</p>
                           <p class="italic">Best manager evah</p>
                         </div>
-                        <div class="rank__thumb"><img src="assets/img/helmet-2" alt=""></div>
+                        <div class="rank__thumb"><img src="assets/img/soccer/A-R.png" alt=""></div>
                       </div>
                       <table class="table table-info3">
                         <thead>
@@ -1095,7 +1106,7 @@
                           <p>Best team evah</p>
                           <p class="italic">Best manager evah</p>
                         </div>
-                        <div class="rank__thumb"><img src="assets/img/helmet-2" alt=""></div>
+                        <div class="rank__thumb"><img src="assets/img/soccer/A-R.png" alt=""></div>
                       </div>
                       <table class="table table-info3">
                         <thead>
@@ -1229,7 +1240,7 @@
                           <p>Best team evah</p>
                           <p class="italic">Best manager evah</p>
                         </div>
-                        <div class="rank__thumb"><img src="assets/img/helmet-2" alt=""></div>
+                        <div class="rank__thumb"><img src="assets/img/soccer/A-R.png" alt=""></div>
                       </div>
                       <table class="table table-info3">
                         <thead>
@@ -1363,7 +1374,7 @@
                           <p>Best team evah</p>
                           <p class="italic">Best manager evah</p>
                         </div>
-                        <div class="rank__thumb"><img src="assets/img/helmet-2" alt=""></div>
+                        <div class="rank__thumb"><img src="assets/img/soccer/A-R.png" alt=""></div>
                       </div>
                       <table class="table table-info3">
                         <thead>
@@ -1497,7 +1508,7 @@
                           <p>Best team evah</p>
                           <p class="italic">Best manager evah</p>
                         </div>
-                        <div class="rank__thumb"><img src="assets/img/helmet-2" alt=""></div>
+                        <div class="rank__thumb"><img src="assets/img/soccer/A-R.png" alt=""></div>
                       </div>
                       <table class="table table-info3">
                         <thead>
@@ -1631,7 +1642,7 @@
                           <p>Best team evah</p>
                           <p class="italic">Best manager evah</p>
                         </div>
-                        <div class="rank__thumb"><img src="assets/img/helmet-2" alt=""></div>
+                        <div class="rank__thumb"><img src="assets/img/soccer/A-R.png" alt=""></div>
                       </div>
                       <table class="table table-info3">
                         <thead>
@@ -1765,7 +1776,7 @@
                           <p>Best team evah</p>
                           <p class="italic">Best manager evah</p>
                         </div>
-                        <div class="rank__thumb"><img src="assets/img/helmet-2" alt=""></div>
+                        <div class="rank__thumb"><img src="assets/img/soccer/A-R.png" alt=""></div>
                       </div>
                       <table class="table table-info3">
                         <thead>
@@ -1899,7 +1910,7 @@
                           <p>Best team evah</p>
                           <p class="italic">Best manager evah</p>
                         </div>
-                        <div class="rank__thumb"><img src="assets/img/helmet-2" alt=""></div>
+                        <div class="rank__thumb"><img src="assets/img/soccer/A-R.png" alt=""></div>
                       </div>
                       <table class="table table-info3">
                         <thead>
@@ -2033,7 +2044,7 @@
                           <p>Best team evah</p>
                           <p class="italic">Best manager evah</p>
                         </div>
-                        <div class="rank__thumb"><img src="assets/img/helmet-2" alt=""></div>
+                        <div class="rank__thumb"><img src="assets/img/soccer/A-R.png" alt=""></div>
                       </div>
                       <table class="table table-info3">
                         <thead>
@@ -2167,7 +2178,7 @@
                           <p>Best team evah</p>
                           <p class="italic">Best manager evah</p>
                         </div>
-                        <div class="rank__thumb"><img src="assets/img/helmet-2" alt=""></div>
+                        <div class="rank__thumb"><img src="assets/img/soccer/A-R.png" alt=""></div>
                       </div>
                       <table class="table table-info3">
                         <thead>
@@ -2301,7 +2312,7 @@
                           <p>Best team evah</p>
                           <p class="italic">Best manager evah</p>
                         </div>
-                        <div class="rank__thumb"><img src="assets/img/helmet-2" alt=""></div>
+                        <div class="rank__thumb"><img src="assets/img/soccer/A-R.png" alt=""></div>
                       </div>
                       <table class="table table-info3">
                         <thead>
