--- a/markup/_dist/enter_contests.html
+++ b/markup/_dist/enter_contests.html
@@ -148,67 +148,67 @@
               </div>
               <div class="nl-team-field soccer">
                 <div class="player-main-block">
-                  <div data-position="GK" class="nl-player-block nl-GK-position"><img src="assets/img/img-goalkeeper.png" alt="goalkeeper">
+                  <div data-position="GK" class="nl-player-block nl-GK-position"><img src="assets/img/soccer/GK.png" alt="goalkeeper">
                     <div class="nl-player-block--data">
                       <p>gronkowski</p>
                       <p class="data orange"><span>12.67</span> <span>$42000</span></p>
                     </div>
                   </div>
-                  <div data-position="DL" class="nl-player-block nl-DL-position"><img src="assets/img/img-players.png" alt="goalkeeper">
+                  <div data-position="DL" class="nl-player-block nl-DL-position"><img src="assets/img/soccer/D-L.png" alt="goalkeeper">
                     <div class="nl-player-block--data">
                       <p>gronkowski</p>
                       <p class="data orange"><span>12.67</span> <span>$42000</span></p>
                     </div>
                   </div>
-                  <div data-position="DR" class="nl-player-block nl-DR-position"><img src="assets/img/img-players.png" alt="goalkeeper">
+                  <div data-position="DR" class="nl-player-block nl-DR-position"><img src="assets/img/soccer/D-R.png" alt="goalkeeper">
                     <div class="nl-player-block--data">
                       <p>gronkowski</p>
                       <p class="data orange"><span>12.67</span> <span>$42000</span></p>
                     </div>
                   </div>
-                  <div data-position="FLEXL" class="nl-player-block nl-FLEXL-position"><img src="assets/img/img-players.png" alt="goalkeeper">
+                  <div data-position="FLEXL" class="nl-player-block nl-FLEXL-position"><img src="assets/img/soccer/FLEX-L.png" alt="goalkeeper">
                     <div class="nl-player-block--data">
                       <p>gronkowski</p>
                       <p class="data orange"><span>12.67</span> <span>$42000</span></p>
                     </div>
                   </div>
-                  <div data-position="DM" class="nl-player-block nl-DM-position"><img src="assets/img/img-players.png" alt="goalkeeper">
+                  <div data-position="DM" class="nl-player-block nl-DM-position"><img src="assets/img/soccer/D-M.png" alt="goalkeeper">
                     <div class="nl-player-block--data">
                       <p>gronkowski</p>
                       <p class="data orange"><span>12.67</span> <span>$42000</span></p>
                     </div>
                   </div>
-                  <div data-position="MM" class="nl-player-block nl-MM-position"><img src="assets/img/img-players.png" alt="goalkeeper">
+                  <div data-position="MM" class="nl-player-block nl-MM-position"><img src="assets/img/soccer/M-M.png" alt="goalkeeper">
                     <div class="nl-player-block--data">
                       <p>gronkowski</p>
                       <p class="data orange"><span>12.67</span> <span>$42000</span></p>
                     </div>
                   </div>
-                  <div data-position="MR" class="nl-player-block nl-MR-position"><img src="assets/img/img-players.png" alt="goalkeeper">
+                  <div data-position="MR" class="nl-player-block nl-MR-position"><img src="assets/img/soccer/M-R.png" alt="goalkeeper">
                     <div class="nl-player-block--data">
                       <p>gronkowski</p>
                       <p class="data orange"><span>12.67</span> <span>$42000</span></p>
                     </div>
                   </div>
-                  <div data-position="ML" class="nl-player-block nl-ML-position"><img src="assets/img/img-players.png" alt="goalkeeper">
+                  <div data-position="ML" class="nl-player-block nl-ML-position"><img src="assets/img/soccer/M-L.png" alt="goalkeeper">
                     <div class="nl-player-block--data">
                       <p>gronkowski</p>
                       <p class="data orange"><span>12.67</span> <span>$42000</span></p>
                     </div>
                   </div>
-                  <div data-position="FLEXR" class="nl-player-block nl-FLEXR-position"><img src="assets/img/img-players.png" alt="goalkeeper">
+                  <div data-position="FLEXR" class="nl-player-block nl-FLEXR-position"><img src="assets/img/soccer/FLEX-R.png" alt="goalkeeper">
                     <div class="nl-player-block--data">
                       <p>gronkowski</p>
                       <p class="data orange"><span>12.67</span> <span>$42000</span></p>
                     </div>
                   </div>
-                  <div data-position="AL" class="nl-player-block nl-AL-position"><img src="assets/img/img-players.png" alt="goalkeeper">
+                  <div data-position="AL" class="nl-player-block nl-AL-position"><img src="assets/img/soccer/A-L.png" alt="goalkeeper">
                     <div class="nl-player-block--data">
                       <p>gronkowski</p>
                       <p class="data orange"><span>12.67</span> <span>$42000</span></p>
                     </div>
                   </div>
-                  <div data-position="AR" class="nl-player-block nl-AR-position"><img src="assets/img/img-players.png" alt="goalkeeper">
+                  <div data-position="AR" class="nl-player-block nl-AR-position"><img src="assets/img/soccer/A-R.png" alt="goalkeeper">
                     <div class="nl-player-block--data">
                       <p>gronkowski</p>
                       <p class="data orange"><span>12.67</span> <span>$42000</span></p>
