--- a/markup/_dist/register.html
+++ b/markup/_dist/register.html
@@ -24,10 +24,7 @@
               <div class="nl-title">The worlds first crypto fantasy sports</div>
             </div>
             <div class="col-12 col-lg-3">
-              <div class="nl-button-login">
-                <button type="button" data-toggle="modal" data-target="#loginModal" class="btn btn-primary nl-m-r-15">Login</button>
-                <button type="button" data-toggle="modal" data-target="#registrationModal" class="btn">SIGN UP</button>
-              </div>
+              <div class="nl-button-login"><a href="login.html" class="btn btn-primary nl-m-r-15">Login</a><a href="register.html" class="btn">SIGN UP</a></div>
             </div>
           </div>
         </div>
