--- a/markup/_dist/my_teams.html
+++ b/markup/_dist/my_teams.html
@@ -119,7 +119,7 @@
             </div>
           </div>
           <div class="row nl-m-b-25">
-            <div class="col-12 col-sm-6 col-md-4 col-lg-4 col-xl-3">
+            <div class="col-12 col-sm-6 col-md-4 col-lg-4 col-xl-3 smaller-padding-teams">
               <div class="nl-card-wrapper">
                 <div class="row">
                   <div class="col-12">
@@ -229,7 +229,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-12 col-sm-6 col-md-4 col-lg-4 col-xl-3">
+            <div class="col-12 col-sm-6 col-md-4 col-lg-4 col-xl-3 smaller-padding-teams">
               <div class="nl-card-wrapper">
                 <div class="row">
                   <div class="col-12">
@@ -339,7 +339,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-12 col-sm-6 col-md-4 col-lg-4 col-xl-3">
+            <div class="col-12 col-sm-6 col-md-4 col-lg-4 col-xl-3 smaller-padding-teams">
               <div class="nl-card-wrapper">
                 <div class="row">
                   <div class="col-12">
@@ -449,7 +449,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-12 col-sm-6 col-md-4 col-lg-4 col-xl-3">
+            <div class="col-12 col-sm-6 col-md-4 col-lg-4 col-xl-3 smaller-padding-teams">
               <div class="nl-card-wrapper">
                 <div class="row">
                   <div class="col-12">
@@ -559,7 +559,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-12 col-sm-6 col-md-4 col-lg-4 col-xl-3">
+            <div class="col-12 col-sm-6 col-md-4 col-lg-4 col-xl-3 smaller-padding-teams">
               <div class="nl-card-wrapper">
                 <div class="row">
                   <div class="col-12">
@@ -669,7 +669,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-12 col-sm-6 col-md-4 col-lg-4 col-xl-3">
+            <div class="col-12 col-sm-6 col-md-4 col-lg-4 col-xl-3 smaller-padding-teams">
               <div class="nl-card-wrapper">
                 <div class="row">
                   <div class="col-12">
@@ -779,7 +779,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-12 col-sm-6 col-md-4 col-lg-4 col-xl-3">
+            <div class="col-12 col-sm-6 col-md-4 col-lg-4 col-xl-3 smaller-padding-teams">
               <div class="nl-card-wrapper">
                 <div class="row">
                   <div class="col-12">
@@ -889,7 +889,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-12 col-sm-6 col-md-4 col-lg-4 col-xl-3">
+            <div class="col-12 col-sm-6 col-md-4 col-lg-4 col-xl-3 smaller-padding-teams">
               <div class="nl-card-wrapper">
                 <div class="row">
                   <div class="col-12">
