--- a/markup/_dist/enter_contests.html
+++ b/markup/_dist/enter_contests.html
@@ -465,7 +465,7 @@
       </section>
       <div id="payoutModal" role="dialog" data-backdrop="static" data-keyboard="false" class="modal fade">
         <div class="row">
-          <div class="col-4 offset-4">
+          <div class="col-10 offset-1 col-sm-8 offset-sm-2 col-lg-6 offset-lg-3">
             <div class="modal-dialog">
               <div class="modal-content">
                 <div class="row">
@@ -478,7 +478,7 @@
                 </div>
                 <div class="modal-body">
                   <div class="row"> 
-                    <div class="col-8 offset-2">
+                    <div class="col-10 offset-1">
                       <div class="row">
                         <div class="col-1 payout-rank">  
                           <p>1.</p>
