updated carousel for better responsive behavior, updated basketball image

--- a/markup/_dist/index.html
+++ b/markup/_dist/index.html
@@ -20,11 +20,11 @@
             <div class="col-4 col-lg-2">
               <div class="nl-logotype"><a href="index.html"><img src="assets/img/logotype.png" alt="NO Limit"></a></div>
             </div>
-            <div class="col-1 col-lg-7">
+            <div class="col-1 col-lg-6">
               <div class="nl-title">The worlds first crypto fantasy sports</div>
             </div>
-            <div class="col-12 col-lg-3">
-              <div class="nl-button-login"><a href="login.html" class="btn btn-primary nl-m-r-15">Login</a><a href="register.html" class="btn">SIGN UP</a></div>
+            <div class="col-12 col-lg-4">
+              <div class="nl-button-login"><a href="login.html" class="btn btn-primary buttons-index nl-m-r-15">Login</a><a href="register.html" class="btn buttons-index">SIGN UP</a></div>
             </div>
           </div>
         </div>
@@ -74,7 +74,7 @@
             <div class="col-6 col-lg-3 nl-start-win-block block4"><a href="#"><img alt="" src="assets/img/nl-start-win-block4.jpg">
                 <h3>win</h3></a></div>
             <div class="col-6 offset-3 10-free-coins">
-              <div class="btn btn-primary 10-free-coins">get 10 free nlc2 coins</div>
+              <div class="btn btn-primary 10-free-coins">get free nlc2 coins</div>
             </div>
           </div>
         </div>
